# dl-frameworks-course

my_homeworks/Homework_1/: README.md  main.py  preprocess.py  pyproject.toml  requirements.txt
my_homeworks/Homework_1/.dvc/: config
my_homeworks/Homework_1/model/: .gitignore  model_20230610045851.joblib.dvc  model_20230610045909.joblib.dvc  model_20230610052445.joblib.dvc  model_20230610060224.joblib.dvc
my_homeworks/Homework_1/notebooks/: main_1.ipynb
my_homeworks/Homework_1/notebooks/reference/: hate-speech-detection-f1-score-99.ipynb  twitter-sentiment-analysis-nlp-smote.ipynb
my_homeworks/Homework_1/report/: .gitignore  report_20230610045851.json.dvc  report_20230610045909.json.dvc  report_20230610052445.json.dvc  report_20230610060224.json  report_20230610060224.json.dvc
my_homeworks/Homework_2/: README.md  pyproject.toml  requirements.txt
my_homeworks/Homework_2/data/clean_data/: movie_characters_metadata.csv  movie_conversations.csv  movie_titles_metadata.csv
my_homeworks/Homework_2/notebook/: preprocess.ipynb
my_homeworks/Homework_2/service/: stream_demo.py  stream_demo1.py  stream_demo2.py
