[tool.poetry]
name = "hate-comments"
version = "0.1.0"
description = "MIPT x AITalentHub"
authors = ["NikitaVenediktov <n.venediktov@gmail.com>"]
readme = "README.md"
packages = [{include = "hate_comments"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
wandb = "^0.15.4"
xgboost = "^1.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
