[tool.poetry]
name = "hate-comments"
version = "0.1.0"
description = "MIPT x AITalentHub"
authors = ["NikitaVenediktov <n.venediktov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
wandb = "^0.15.4"
xgboost = "^1.7.5"
dvc = "^2.58.2"
dvc-gdrive = "^2.19.2"
wordcloud = "^1.9.2"
lazypredict = "^0.2.12"
imbalanced-learn = "^0.10.1"
nltk = "^3.8.1"
polars = "^0.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
