[tool.poetry]
name = "homework-2"
version = "0.1.0"
description = ""
authors = ["NikitaV <n.venediktov@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^2.0.2"
numpy = "^1.24.3"
ray = {extras = ["serve"], version = "^2.5.0"}
gradio = "3.19"
transformers = "^4.30.2"
streamlit = "^1.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
