[tool.poetry]
name = "homework-2"
version = "0.1.0"
description = ""
authors = ["NikitaV <n.venediktov@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
